--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <form action="/" method="post">
 
+      <input type="text" name="amount" placeholder="quantity">
+
       <select name="crypto">
         <option value="BTC">Bitcoin</option>
         <option value="ETH">Ethereum</option>
